--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="stroke_button">#E8ECF4</color>
     <color name="overlay_background">#808A8A8A</color>
     <color name="chip_bg">#EDEDED</color>
+    <color name="disabled_button">#C2C2C2</color>
 </resources>
