--- a/app/src/main/res/layout/pose_library_add_new_pose.xml
+++ b/app/src/main/res/layout/pose_library_add_new_pose.xml
@@ -3,11 +3,44 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/add_pose_new_root"
+    android:id="@+id/fragment_pose_library"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="24dp"
     android:background="@android:color/white">
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.85"
+        android:orientation="horizontal"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_pl_back"
+        style="@style/Widget.Yogis.Button.Back"
+        android:layout_width="40dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        app:icon="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_pl_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="@string/define_new_pose"
+        android:textSize="24sp"
+        android:fontFamily="@font/urbanist"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/btn_pl_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_region"
@@ -16,13 +49,11 @@
         android:fillViewport="true"
         android:fadeScrollbars="false"
         android:scrollbars="vertical"
-        android:paddingTop="4dp"
-        android:paddingEnd="8dp"
-        tools:ignore="RtlSymmetry"
-        app:layout_constraintTop_toTopOf="parent"
+        android:paddingTop="16dp"
+        app:layout_constraintTop_toTopOf="@+id/tv_pl_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_pose">
+        app:layout_constraintBottom_toTopOf="@+id/tv_credits">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +91,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="16dp"
-                    android:inputType="none"/>
+                    android:inputType="none"
+                    tools:ignore="LabelFor,RtlSymmetry" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -141,17 +173,68 @@
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    <TextView
+        android:id="@+id/tv_credits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/images_credits_2013_2025_workoutlabs_llc_all_rights_reserved"
+        android:textSize="12sp"
+        android:textColor="@color/sub_titles_text"
+        android:fontFamily="@font/urbanist"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@id/guideline_action_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="8dp"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_pose"
+        android:id="@+id/btn_pl_add"
         style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:text="@string/add_pose"
         android:textAllCaps="false"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv_back_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/urbanist"
+        android:text="@string/back_to_main_menu"
+        android:textColor="@color/sub_titles_text"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/btn_pl_add"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <FrameLayout
+        android:id="@+id/image_upload_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/overlay_background"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvLoaderText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/image_is_uploading_should_take_a_few_seconds"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:layout_marginTop="24dp"
+                android:gravity="center" />
+        </LinearLayout>
+    </FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
